# qa_guru_homework_python_lesson16

./: README.md  pyproject.toml  schema_softmg_old.json
tests/: test_api.py  test_fakestoreapi.py  test_get_softmg_api.py
