[tool.poetry]
name = "qa-poetry-lesson-16"
version = "0.1.0"
description = ""
authors = ["achernecova <achernecova1904@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
selene = "2.0.0rc9"
pytest = "^9.0.2"
pydantic = "^2.12.5"


[tool.poetry.group.dev.dependencies]
pylint = "^4.0.4"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
